--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,17 @@ body {
 }
 header {
 }
-.logo img {
+.logo {
+  font-family: "Raleway",sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17em;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: #2e2f42;
+}
+.logo-accent{
+  color: #4d5ae5;
 }
 .nav-list {
 }
@@ -35,6 +45,7 @@ header {
 }
 
 .hero {
+  background-color: #2e2f42;
 }
 .hero-title {
   font-weight: 700;
@@ -46,7 +57,7 @@ header {
 .hero-btn {
   cursor: pointer;
   background-color: #4d5ae5;
-  color:#ffffff;
+  color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -55,7 +66,7 @@ header {
   border-radius: 4px;
 }
 .hero-btn:hover,
-.hero-btn:focus{
+.hero-btn:focus {
   background-color: #404bbf;
   outline: none;
 }
@@ -67,6 +78,7 @@ header {
 .feature-item {
 }
 .features-title {
+  font-family: "Roboto",sans-serif;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.2;
@@ -74,6 +86,7 @@ header {
   color: #2e2f42;
 }
 .feature-text {
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -81,6 +94,7 @@ header {
 }
 
 .team {
+  background-color: #f4f4fd;
 }
 .team .section-title {
   font-weight: 700;
@@ -92,6 +106,9 @@ header {
 .team-list {
 }
 .team-card {
+  width: 264px;
+  height: 380px;
+  gap: 32px;
 }
 .team-name {
   font-weight: 500;
@@ -99,12 +116,14 @@ header {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  background-color: #ffffff;
 }
 .team-role {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #434455;
+  background-color: #ffffff;
 }
 
 .portfolio .section-title {
@@ -121,26 +140,47 @@ header {
 .portfolio-meta {
 }
 .card-title {
-   font-weight: 500;        
-  font-size: 20px;         
-  line-height: 1.2;        
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
-  color: #2e2f42; 
+  color: #2e2f42;
 }
 .card-subtitle {
-  font-size: 16px;         
-  line-height: 1.5;        
+  font-size: 16px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455; 
+  color: #434455;
 }
 
 .site-footer {
+  background-color: #2e2f42;
+  padding: 40px 0;
 }
-.footer-logo img {
+.footer-logo {
+  font-family: "Raleway",sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: #f4f4fd;
 }
 .footer-text {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #434455;
+  color: #f4f4fd;
+}
+.footer-logo .logo-accent {
+  color: #4d5ae5;
+}
+.nav-list,
+.contacts-list,
+.features-ul,
+.team-list,
+.portfolio-list{
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
